--- a/server/package.json
+++ b/server/package.json
@@ -9,6 +9,7 @@
   "author": "Macallan Brown",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.18.3",
     "db-migrate": "^0.11.5",
     "db-migrate-mysql": "^1.1.10",
     "express": "^4.16.4",
