--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-      "start": "node index.js"
+    "prestart": "db-migrate up",
+    "start": "node index.js"
   },
   "author": "Macallan Brown",
   "license": "ISC",
