--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "react-dom": "^16.8.3",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^2.1.8",
+    "react-select": "^2.0.0-beta.7",
     "reactstrap": "^7.1.0"
   },
   "scripts": {
